syntax = "proto3";

package zitadel.idp.v1;

option go_package ="github.com/caos/zitadel/pkg/grpc/idp";

message IDP {
    string id = 1;
    zitadel.v1.ObjectDetails details = 2;
    IDPState state = 3;
    string name = 4;
    IDPStylingType styling_type = 5;
    oneof config {
        OIDCConfig oidc_config = 6;
    }
}

message IDPUserLink {
    string user_id = 1;
    string idp_id = 2;
    string idp_name = 3;
    string provided_user_id = 4;
    string provided_user_name = 5;
    IDPType idp_type = 6;
}

message IDPLoginPolicyLink {
    string idp_id = 1;
    string idp_name = 2;
    IDPType idp_type = 3;
}

//TODO: discuss links? which data are needeD?

enum IDPState {
    IDP_STATE_UNSPECIFIED = 0;
    IDP_STATE_ACTIVE = 1;
    IDP_STATE_INACTIVE = 2;
}

enum IDPStylingType {
    STYLING_TYPE_UNSPECIFIED = 0;
    STYLING_TYPE_GOOGLE = 1;
}

enum IDPType {
    IDP_TYPE_UNSPECIFIED = 0;
    IDP_TYPE_OIDC = 1;
    IDP_TYPE_SAML = 2;
}

message OIDCConfig {
    string client_id = 1;
    string client_secret = 2;
    string issuer = 3;
    repeated string scopes = 4;
    OIDCMappingField display_name_mapping = 5;
    OIDCMappingField username_mapping = 6;
}

enum OIDCMappingField {
    OIDC_MAPPING_FIELD_UNSPECIFIED = 0;
    OIDC_MAPPING_FIELD_PREFERRED_USERNAME = 1;
    OIDC_MAPPING_FIELD_EMAIL = 2;
}

message IDPQuery {
    oneof query {
        UserIDQuery user_id = 1;
    }
}

message UserIDQuery {
    string id = 1;
}

enum IDPFieldName {
    IDP_FIELD_NAME_UNSPECIFIED = 0;
    IDP_FIELD_NAME_NAME = 1;
}
